--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@
 
 
 @font-face {
-    font-family: 'gotham_prolight';
+    font-family: 'gotham_prolight_italic';
     src: url('/fonts/gothaproligita-webfont.woff2') format('woff2'),
          url('/fonts/gothaproligita-webfont.woff') format('woff');
     font-weight: normal;
@@ -79,6 +79,14 @@ html, body {
     width: 100%;
 }
 
+a {
+    text-decoration: none;
+}
+
+li {
+    
+}
+
 .body {
 
 }
@@ -124,12 +132,22 @@ html, body {
 
 .contacts__phone {
     color: #fff;
+    font-weight: bold;
+    font-family: 'gotham_proregular';
 }
 
 .contacts__chart {
     font-size: 14px;
+    font-family: open sans;
+    color: #a52568;
+    text-decoration: revert;
 }
 
 .banner {
     width: 1140px;
+}
+
+.menu__list {
+    display: flex;
+    flex-direction: column;
 }
