--- a/css/main.css
+++ b/css/main.css
@@ -298,7 +298,7 @@ img {
     margin-left: 171px;
 }
 
-.offers__list {
+/* .offers__list {
     display: flex;
     justify-content: center;
 }
@@ -333,4 +333,4 @@ img {
 .offers__title {
     font-weight: bold;
     font-size: 11px;
-}
+} */
